[gd_scene load_steps=4 format=2]

[ext_resource path="res://SpriteSheets/BabyTown2Weapons.png" type="Texture" id=1]
[ext_resource path="res://Weapons/M2.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.00662252, 1 )
colors = PoolColorArray( 1, 1, 0.247059, 1, 1, 0.498039, 0, 1 )

[node name="M2" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 26, 25 )
texture = ExtResource( 1 )
vframes = 5
hframes = 2
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sprite"]
position = Vector2( 47, -1 )
emitting = false
amount = 20
lifetime = 0.05
one_shot = true
spread = 30.0
initial_velocity = 300.0
initial_velocity_random = 1.0
color_ramp = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 47, -1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HoldingPoint" type="Position2D" parent="Sprite"]
position = Vector2( -38, -6 )
__meta__ = {
"_edit_lock_": true
}

[node name="HoldingPoint2" type="Position2D" parent="Sprite"]
position = Vector2( -13, -6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15

[node name="Reload" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
